# ObjectDetectionApi

./: .dockerignore  .gitignore  CITATION.cff  CMakeLists.txt  CmakeLists.txt  Dockerfile  LICENSE  README.md  app.cpp  dockerfile_custom  opencv.rb
.github/workflows/: cmake.yml  docker-publish.yml
src/: App.cpp  AppComponent.hpp
src/controller/: MyController.hpp
src/dto/: base_dto.hpp
src/ia/: inference.cpp  inference.h
src/models/: inference_dto.hpp  responses_dto.hpp
src/routes/: base.hpp  images.cpp  images.hpp
utility/: install-opencv.sh
